reader: restructure the feed bar and fix other layout issues

--- a/app.css
+++ b/app.css
@@ -9,6 +9,8 @@ html, body {
 }
 body {
   font-family:Arial;
+font-size:14px;
+line-height:14px;
 }
 #menu {
 float: left;
@@ -19,8 +21,21 @@ height:calc(100% - 2 * 20px);
 overflow-y:scroll;
 }
 #menu a {
+width: 100%;
+text-overflow: ellipsis;
+white-space: nowrap;
+overflow: hidden;
+display: block;
   text-decoration:none;
   color:black;
+font-size: 16px;
+line-height: 16px;
+height: 20px;
+padding: 2px 0px;
+box-sizing: border-box;
+}
+#feedlist .feed {
+margin:2px 0px;
 }
 #menu a:visited {
   text-decoration:none;
@@ -39,8 +54,9 @@ width:calc(100% - 300px - 2 * 30px - 2 * 40px - 2px);
 /*  overflow-y:scroll;*/
 }
 #feedentries {
-height:100%;
+height:calc(100% - 44px - 5px); /*height of feedbar */
 overflow-y:scroll;
+margin-top:5px;
 }
 #index {
   display:block;
@@ -135,4 +151,23 @@ display:block;
 }
 #flts {
 list-style-type:none;
+}
+#feedbar .item {
+margin:0px 10px;
+}
+#feedbar .item:first-of-type {
+	margin-left:0px;
+}
+#feedbar .item:last-of-type {
+	margin-right:0px;
+}
+#feedbar button {
+	padding:0px 3px;
+}
+#feedbar h1 {
+	font-size:24px;
+line-height:24px;
+}
+#feedmenu {
+height:20px;
 }
